# gsudo

./: .gitignore  README.md  pyproject.toml
src/semantic_mirror/: __init__.py  builder.py  cli.py  corpus.py  dataset.py  evaluation.py  extractors.py  gitdiff.py  parsing.py  render.py  review.py  rewards.py  schema.py  source.py  teacher.py  training.py
tests/: test_semantic_mirror.py
